# ML_repos

./: .gitignore  ML.ipynb  README.md  dataset.py  plot_metrics.py  pyproject.toml  resnet.py  train.py
Python/: test_resnet.py
Python/data/: dataloader.py
Python/models/: resnet.py
Python/train/: train.py
