[tool.poetry]
name = "ml-repos"
version = "0.1.0"
description = ""
authors = ["Michela"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
torch = "^2.1.2"
torchvision = "^0.16.2"
lightning = "^2.1.3"
wandb = "^0.16.2"
numpy = "^1.26.3"
matplot = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
